<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <TableRow
            android:background="@drawable/toolbarbackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/equation"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sol1"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sol2"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:layout_gravity="center_horizontal" />

        </TableRow>
    </TableLayout>
</RelativeLayout>